# Hackathon2

./: .gitignore  README.md
phase-2-fullstack/frontend/: package-lock.json  package.json
phase-2-fullstack/frontend/app/: page.tsx
phase-2-fullstack/frontend/lib/: api.ts
phase-3-ai-chatbot/backend/: requirements.txt
phase-3-ai-chatbot/frontend/: package-lock.json
phase-3-ai-chatbot/frontend/app/: layout.tsx
phase-3-ai-chatbot/frontend/components/: Header.tsx
phase-3-ai-chatbot/frontend/lib/: api.ts  chat-api.ts
phase-4-kubernetes/: .gitattributes
phase-4-kubernetes/backend/src/: config.py
phase-4-kubernetes/frontend/app/: page.tsx
phase-5-claud/: README.md
phase-5-claud/.specify/memory/: constitution.md
phase-5-claud/backend/: pyproject.toml
phase-5-claud/backend/src/: main.py
phase-5-claud/backend/src/events/: __init__.py  publisher.py  websocket.py
phase-5-claud/backend/src/mcp/: tools.py
phase-5-claud/backend/src/routers/: internal.py  tasks.py
phase-5-claud/frontend/: CLAUDE.md  Dockerfile  README.md  package-lock.json
phase-5-claud/frontend/components/: TaskForm.tsx  TaskList.tsx
phase-5-claud/frontend/lib/: chat-api.ts  (+1 more)
phase-5-claud/k8s-manifests/: frontend-deployment.yaml  ingress.yaml  redpanda-deployment.yaml  reminder-deployment.yaml
phase-5-claud/kafka/: create-topics.sh
phase-5-claude/: CLAUDE.md
phase-5-claude/backend/: Dockerfile  README.md
phase-5-claude/frontend/: package.json
phase-5-claude/k8s-manifests/: backend-deployment.yaml  notification-deployment.yaml
phase-5-claude/kafka/: topics.json
(+67 files in other folders)
